# atomspace-hometask

./: CMakeLists.txt  README  query.cpp
