CMAKE_MINIMUM_REQUIRED(VERSION 2.88)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")

# Cogutil
FIND_PACKAGE(CogUtil)
IF (COGUTIL_FOUND)
        MESSAGE(STATUS "CogUtil found.")
        ADD_DEFINITIONS(-DHAVE_COGUTIL)
        SET(HAVE_COGUTIL 1)
        INCLUDE_DIRECTORIES(${COGUTIL_INCLUDE_DIR})
ELSE (COGUTIL_FOUND)
        MESSAGE(FATAL_ERROR "CogUtil missing: it is needed for everything!")
ENDIF (COGUTIL_FOUND)

# AtomSpace
FIND_PACKAGE(AtomSpace 5.0.3 REQUIRED)
IF (ATOMSPACE_FOUND)
        MESSAGE(STATUS "AtomSpace found.")
        ADD_DEFINITIONS(-DHAVE_ATOMSPACE)
        SET(HAVE_ATOMSPACE 1)
        INCLUDE_DIRECTORIES(${ATOMSPACE_INCLUDE_DIR})
ELSE (ATOMSPACE_FOUND)
        MESSAGE(FATAL_ERROR "AtomSpace missing: it is needed for everything!")
ENDIF (ATOMSPACE_FOUND)

ADD_EXECUTABLE(query query.cpp)
TARGET_LINK_LIBRARIES(query ${ATOMSPACE_LIBRARIES} ${COGUTIL_LIBRARY})
